<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RunRun</string>
    <string name="action_settings">Settings</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="firstpage_q1">1) Enter running distance.(in m)</string>
    <string name="firstpage_A1">20</string>
    <string name="firstpage_q2">2) Enter time to run the distance. (in  S)</string>
    <string name="firstpage_A2">60</string>
    <string name="firstpage_q3">3) Select a beep sound.</string>
    <string name="firstpage_q4">4) Select a time decrement rate. (in %)</string>
    <string name="firstpage_A4">10</string>
    <string name="firstpage_q5">5) Enter your name.</string>
    <string name="firstpage_q6">6) Press START when ready.</string>
    <string name="firstpage_START">START</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_world">Hello world!</string>

    <string-array name="beep_arrays">
        <item>blue</item>
        <item>jungle</item>
        <item>desert</item>
    </string-array>

    <string name="title_activity_timer">TimerActivity</string>
    <string name="laps_completed_lable">Laps Completed</string>
    <string name="laps_completed">0</string>
    <string name="total_distance_lable">Total Distance(m)</string>
    <string name="top_speed_lable">Top Speed(m/s)</string>
    <string name="total_time_lable">Total Time(s)</string>
    <string name="initial_speed_label">Initial Speed(m/s)</string>
    <string name="average_speed_lable">Average Speed(m/s)</string>
    <string name="total_distance">0</string>
    <string name="top_speed">0</string>
    <string name="total_time">0</string>
    <string name="initial_speed">0</string>
    <string name="average_speed">0</string>
    <string name="stop">START</string>
    <string name="logButton">Logs</string>
    <string name="title_activity_log">LogActivity</string>

</resources>